<?xml version="1.0"?>
<package format="2">
  <name>thormang3_ppc</name>
  <version>0.2.0</version>
  <description>
    ROS packages for the thormang3_ppc (meta package)
  </description>
  <license>Apache 2.0</license>
  <author email="zerom@robotis.com">Zerom</author>
  <author email="sch@robotis.com">SCH</author>
  <author email="kmjung@robotis.com">Kayman</author>
  <author>Jay Song</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/thormang3_ppc</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/platform/thormang3/introduction/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/ROBOTIS-THORMANG-PPC/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>thormang3_sensors</exec_depend>
  <exec_depend>thormang3_manipulation_demo</exec_depend>
  <exec_depend>thormang3_walking_demo</exec_depend>
  <export><metapackage/></export>
</package>
